fix: search visibility

--- a/src/scss/partials/_search.scss
+++ b/src/scss/partials/_search.scss
@@ -9,6 +9,7 @@
 	right: 0;
 	top: 0;
 	opacity: 0;
+  display: none;
 	z-index: -1;
 	transition: opacity .6s ease-in-out;
 	padding: 32px 0 110px;
@@ -135,6 +136,7 @@ body{
 		}
 		
 		.site-search{
+      display: block;
 			margin-top: 0;
 			opacity: 1;
 			z-index: 111;
